--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "dlled",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "inquirer": "^7.3.3"
   }
 }
